--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
-.test {
-  color: red;
-  display: flex;
-  justify-content: center; }
-  .test h1 {
-    font-size: 5em; }
+.main-container {
+  height: 100vh;
+  width: 100%; }
+  .main-container .nav-container {
+    display: flex;
+    flex-direction: column;
+    background: #F8F8FA;
+    color: #94979B;
+    max-width: 15vw;
+    height: 100%; }
