--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,12 @@
-.test {
-	color: red;
-	display: flex;
-	justify-content:center;
-	h1 {
-		font-size: 5em;
+.main-container {
+	height: 100vh;
+	width: 100%;
+	.nav-container{
+		display: flex;
+		flex-direction:column;
+		background: #F8F8FA;
+		color: #94979B;
+		max-width: 15vw;
+		height:100%;
 	}
 }
