--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,28 @@
+@import url("https://fonts.googleapis.com/css?family=Lato");
+/* App Colors */
+/* App Font */
+/* App Mixins */
+/* App Variables */
+/* App Functions */
 .main-container {
   height: 100vh;
-  width: 100%; }
+  width: 100%;
+  font-family: "Lato", sans-serif; }
   .main-container .nav-container {
+    font-size: 1.2em;
     display: flex;
     flex-direction: column;
     background: #F8F8FA;
     color: #94979B;
     max-width: 15vw;
     height: 100%; }
+    .main-container .nav-container #nav-channels {
+      padding: 15px 10px;
+      cursor: pointer; }
+      .main-container .nav-container #nav-channels:hover {
+        color: black; }
+    .main-container .nav-container #nav-dm {
+      padding: 15px 10px;
+      cursor: pointer; }
+      .main-container .nav-container #nav-dm:hover {
+        color: black; }
