--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,15 @@
     max-width: 15vw;
     height: 100%; }
     .main-container .nav-container #nav-channels {
+      display: flex;
+      justify-content: space-between;
       padding: 15px 10px;
       cursor: pointer; }
       .main-container .nav-container #nav-channels:hover {
         color: black; }
     .main-container .nav-container #nav-dm {
+      display: flex;
+      justify-content: space-between;
       padding: 15px 10px;
       cursor: pointer; }
       .main-container .nav-container #nav-dm:hover {
