--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,8 @@
 		max-width: 15vw;
 		height:100%;
 		#nav-channels{
+			display: flex;
+			justify-content:space-between;
 			padding:15px 10px;
 			cursor: pointer;
 			&:hover{
@@ -20,6 +22,8 @@
 			}
 		}
 		#nav-dm{
+			display: flex;
+			justify-content:space-between;
 			padding:15px 10px;
 			cursor: pointer;
 			&:hover{
