--- a/src/components/Channels/Channels.css
+++ b/src/components/Channels/Channels.css
@@ -8,6 +8,6 @@
   font-family: "Lato", sans-serif; }
   .channel-title p {
     margin: 0;
-    padding-left: 15px; }
+    padding: 10px 11px 0; }
     .channel-title p span {
       padding-right: 2px; }
