--- a/src/components/DirectChannels/DirectChannels.css
+++ b/src/components/DirectChannels/DirectChannels.css
@@ -9,7 +9,7 @@
   .dm-title p {
     display: flex;
     align-items: center;
-    padding-left: 15px;
+    padding: 10px 11px 0;
     margin: 0; }
     .dm-title p span {
       display: inline-block;
