--- a/src/components/DirectChannels/DirectChannels.scss
+++ b/src/components/DirectChannels/DirectChannels.scss
@@ -5,7 +5,7 @@
 	p {
 		display: flex;
 		align-items:center;
-		padding-left:15px;
+		padding:10px 11px 0;
 		margin:0;
 		span {
 			display: inline-block;
