createChannel component and basic styling

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 /* App Colors */
 $active-green:#64D25A;
+$light-grey: #717274;
 
 /* App Font */
 $lato: 'Lato', sans-serif;
