--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
 /* App Mixins */
 /* App Variables */
 /* App Functions */
+body, html {
+  margin: 0;
+  padding: 0; }
+
 .main-container {
   height: 100vh;
   width: 100%;
