--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 /* App Colors */
 $active-green:#64D25A;
-$light-grey: #717274;
+$light-grey: #858688;
+$btn-white: #EAEAE9;
 
 /* App Font */
 $lato: 'Lato', sans-serif;
