--- a/src/components/CreateChannel/CreateChannel.scss
+++ b/src/components/CreateChannel/CreateChannel.scss
@@ -20,7 +20,6 @@ body, html{
 	.channel-wrap{
 		padding-top:7%;
 		width: 42%;
-		border: 1px solid black;
 		h2{
 			font-size: 2em;
 			color: black;
@@ -28,16 +27,43 @@ body, html{
 		h5{
 			font-weight:lighter;
 			color: $light-grey;
+			line-height:20px;
 		}
 		p{
-			margin:0;
+			margin:0 0 7px;
+			color: #464646;
 		}
 		input{
+			font-size:1em;
+			padding-left: 10px;
 			width: 97%;
 			height: 5vh;
 			border-radius: 5px;
 			outline: none;
 			border: 1px solid $light-grey;
+			margin-bottom:20px;
+			font-family:$lato;
+		}
+		.btn-wrap{
+			display: flex;
+			justify-content: flex-end;
+			padding-right: 7px;
+			font-family:$lato;
+			button{
+				padding: 13px;
+				font-size: .9em;
+				font-weight: bold;
+				margin-right:10px;
+				outline:none;
+				border: .5px solid $light-grey;
+				border-radius: 5px;
+				background: $btn-white;
+				color: $light-grey;
+			}
+			button:nth-child(2){
+				background: $light-grey;
+				color: white;
+			}
 		}
 	}
 }
