--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 /* App Colors */
 $active-green:#64D25A;
-$light-grey: #858688;
+$light-grey: #CDCECE;
 $btn-white: #EAEAE9;
+$create-green: #2AB27B;
+$royal-blue:#2780F8;
+$drk-grey:#555459;
 
 /* App Font */
 $lato: 'Lato', sans-serif;
