--- a/src/components/CreateChannel/CreateChannel.scss
+++ b/src/components/CreateChannel/CreateChannel.scss
@@ -57,8 +57,13 @@ body, html{
 				outline:none;
 				border: .5px solid $light-grey;
 				border-radius: 5px;
-				background: $btn-white;
-				color: $light-grey;
+				background: white;
+				color: $drk-grey;
+				cursor: pointer;
+			}
+			button:first-child:hover{
+				color:$royal-blue;
+				background:white;
 			}
 			button:nth-child(2){
 				background: $light-grey;
