--- a/src/App.scss
+++ b/src/App.scss
@@ -18,21 +18,29 @@ body, html{
 		max-width: 15vw;
 		height:100%;
 		#nav-channels{
-			display: flex;
-			justify-content:space-between;
-			padding:15px 10px;
+			padding: 15px 10px;
 			cursor: pointer;
 			&:hover{
 				color: black;
 			}
+			p {
+				display: flex;
+				margin: 0;
+				justify-content: space-between;
+				width: 100%;
+			}
 		}
 		#nav-dm{
-			display: flex;
-			justify-content:space-between;
-			padding:15px 10px;
+			padding: 15px 10px;
 			cursor: pointer;
 			&:hover{
 				color: black;
+			}
+			p {
+				display: flex;
+				margin: 0;
+				justify-content: space-between;
+				width: 100%;
 			}
 		}
 	}
