header styling finished

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -6,6 +6,7 @@ $btn-white: #EAEAE9;
 $create-green: #2AB27B;
 $royal-blue:#2780F8;
 $drk-grey:#555459;
+$header-grey:#A0A0A2;
 
 /* App Font */
 $lato: 'Lato', sans-serif;
