--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 /* App Variables */
 /* App Functions */
 .main-container {
+  display: flex;
   height: 100vh;
   width: 100%;
   font-family: "Lato", sans-serif; }
@@ -15,6 +16,7 @@
     background: #F8F8FA;
     color: #94979B;
     max-width: 15vw;
+    min-width: 15vw;
     height: 100%; }
     .main-container .nav-container #nav-channels {
       display: flex;
@@ -40,3 +42,5 @@
         justify-content: space-between; }
       .main-container .nav-container #nav-dm:hover {
         color: black; }
+  .main-container .message-container {
+    width: calc(100vw - 15vw); }
