--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import "./styles/base.scss";
 
 .main-container {
+	display: flex;
 	height: 100vh;
 	width: 100%;
 	font-family:$lato;
@@ -11,6 +12,7 @@
 		background: #F8F8FA;
 		color: #94979B;
 		max-width: 15vw;
+		min-width:15vw;
 		height:100%;
 		#nav-channels{
 			display: flex;
@@ -42,5 +44,9 @@
 				color: black;
 			}
 		}
+	}
+	.message-container {
+		width:calc(100vw - 15vw);
+
 	}
 }
