minor changes on header

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 	width: 100%;
 	font-family:$lato;
 	.nav-container{
+		border-right:1px solid #E8E8E8;
 		font-size: 1.2em;
 		display: flex;
 		flex-direction:column;
