--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   width: 100%;
   font-family: "Lato", sans-serif; }
   .main-container .nav-container {
+    border-right: 1px solid #E8E8E8;
     font-size: 1.2em;
     display: flex;
     flex-direction: column;
