--- a/src/components/CreateChannel/CreateChannel.css
+++ b/src/components/CreateChannel/CreateChannel.css
@@ -7,6 +7,7 @@
 .create-channel-container {
   cursor: default;
   position: absolute;
+  z-index: 100;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -54,9 +55,7 @@
         background: white;
         color: #555459;
         cursor: pointer; }
-      .create-channel-container .channel-wrap .btn-wrap .active {
-        background: #64D25A !important; }
-      .create-channel-container .channel-wrap .btn-wrap button:first-child:hover {
+.create-channel-container .channel-wrap .btn-wrap button:first-child:hover {
         color: #2780F8;
         background: white; }
       .create-channel-container .channel-wrap .btn-wrap button:nth-child(2) {
