--- a/src/components/CreateChannel/CreateChannel.scss
+++ b/src/components/CreateChannel/CreateChannel.scss
@@ -3,6 +3,7 @@
 .create-channel-container{
 	cursor: default;
 	position: absolute;
+	z-index:100;
 	height: 100vh;
 	width: 100vw;
 	display: flex;
