--- a/src/components/MessagesLayout/MessagesView.css
+++ b/src/components/MessagesLayout/MessagesView.css
@@ -1,4 +1,6 @@
 .message-wrap .message-container {
+  display: flex;
+  flex-direction: column-reverse;
   position: absolute;
   border: 1px solid green;
   height: 84vh;
