sockets are working

--- a/src/components/MessagesLayout/MessagesView.css
+++ b/src/components/MessagesLayout/MessagesView.css
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column-reverse;
   position: absolute;
-  border: 1px solid green;
   height: 84vh;
-  width: 85%;
+  width: 85vw;
   margin-top: 7vh;
   margin-left: 25px;
   overflow-y: scroll; }
