--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@
 		background: #F8F8FA;
 		color: #94979B;
 		max-width: 12vw;
-		min-width:12vw;
+		min-width: 220px;
 		height:100%;
 		#nav-channels{
 			display: flex;
