--- a/src/components/MessagesLayout/MessagesView.css
+++ b/src/components/MessagesLayout/MessagesView.css
@@ -1,6 +1,7 @@
 .message-wrap .message-container {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
+  justify-content: flex-end;
   position: absolute;
   height: 84vh;
   width: 85vw;
