--- a/src/components/MessagesLayout/MessagesView.scss
+++ b/src/components/MessagesLayout/MessagesView.scss
@@ -1,7 +1,8 @@
 .message-wrap{
 	.message-container{
 		display: flex;
-		flex-direction: column-reverse;
+		flex-direction: column;
+		justify-content: flex-end;
 		position: absolute;
 		height:84vh;
 		width:85vw;
