refactored sockets into their controller, and added Register Route/View

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -7,6 +7,7 @@ $create-green: #2AB27B;
 $royal-blue:#2780F8;
 $drk-grey:#555459;
 $header-grey:#A0A0A2;
+$nav-active:#C1CBD5;
 
 /* App Font */
 $lato: 'Lato', sans-serif;
