--- a/src/components/DirectChannels/DirectChannels.scss
+++ b/src/components/DirectChannels/DirectChannels.scss
@@ -9,12 +9,11 @@
 		margin:0;
 		span {
 			display: inline-block;
-			background-color: $active-green;
-			width:11px;
-			height:11px;
-			box-shadow: inset 0 0 0 2px #fff,0 0 0 2px #464646;
-			border-radius:50%;
-			margin-right:5px;
+			background-color: #64D25A;
+			width: 9px;
+			height: 9px;
+			border-radius: 50%;
+			margin-right: 5px;
 		}
 	}
 }
