--- a/src/components/Login/LoginHeader/LoginHeader.css
+++ b/src/components/Login/LoginHeader/LoginHeader.css
@@ -26,6 +26,14 @@
       padding: 8px;
       margin-right: 15px;
       cursor: pointer; }
+      .header-main-container .login-wrap p a {
+        text-decoration: none; }
+        .header-main-container .login-wrap p a:link {
+          color: #404B55; }
+        .header-main-container .login-wrap p a:visited {
+          color: #404B55; }
+        .header-main-container .login-wrap p a:active {
+          color: #404B55; }
       .header-main-container .login-wrap p:hover {
         opacity: 1;
         background: rgba(0, 0, 0, 0.1); }
