--- a/src/components/Login/LoginHeader/LoginHeader.scss
+++ b/src/components/Login/LoginHeader/LoginHeader.scss
@@ -23,6 +23,12 @@
 			padding: 8px;
 			margin-right: 15px;
 			cursor: pointer;
+			a{
+				text-decoration: none;
+				&:link{ color:#404B55;}
+				&:visited{color:#404B55;}
+				&:active{color:#404B55;}
+			}
 			&:hover{
 				opacity: 1;
 				background: rgba(0,0,0,.1);
