--- a/src/components/Login/RegisterInput/RegisterInput.scss
+++ b/src/components/Login/RegisterInput/RegisterInput.scss
@@ -14,7 +14,7 @@
 	h1{
 		color: $drk-grey;
 		font-size: 2em;
-		margin: 1em 0 .5em;
+		margin: 1em 0 0;
 	}
 	h3{
 		color: $drk-grey;
@@ -45,5 +45,11 @@
 		font-weight:bold;
 		margin-bottom: 20px;
 		cursor: pointer;
+		a{
+			text-decoration: none;
+			&:link{ color:white;}
+			&:visited{color:white;}
+			&:active{color:white;}
+		}
 	}
 }
