--- a/src/components/Login/LoginInput/LoginInput.css
+++ b/src/components/Login/LoginInput/LoginInput.css
@@ -42,5 +42,13 @@
     border-radius: 5px;
     color: white;
     font-weight: bold;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     cursor: pointer; }
+    .input-container button a {
+      text-decoration: none; }
+      .input-container button a:link {
+        color: white; }
+      .input-container button a:visited {
+        color: white; }
+      .input-container button a:active {
+        color: white; }
