--- a/src/components/Login/LoginInput/LoginInput.scss
+++ b/src/components/Login/LoginInput/LoginInput.scss
@@ -42,7 +42,13 @@
 		border-radius: 5px;
 		color:white;
 		font-weight:bold;
-		margin-bottom: 40px;
+		margin-bottom: 20px;
 		cursor: pointer;
+		a{
+			text-decoration: none;
+			&:link{ color:white;}
+			&:visited{color:white;}
+			&:active{color:white;}
+		}
 	}
 }
