--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,26 +12,45 @@ header {
   justify-content: flex-end;
   height: 6vh;
   width: 87vw;
-  color: #A0A0A2;
+  color: #a0a0a2;
   font-size: 1.3em;
-  border-bottom: 1px solid #E8E8E8; }
-  header .right-wrap {
-    width: 35%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around; }
-    header .right-wrap input {
-      font-family: "Lato", sans-serif;
-      height: 3vh;
-      border-radius: 5px;
-      border: 1px solid #A0A0A2;
-      width: 50%;
-      padding-left: 5px;
-      font-size: .9em; }
-      header .right-wrap input:focus {
-        outline: none; }
-      header .right-wrap input::placeholder {
-        color: #CDCECE; }
-    header .right-wrap i:hover {
-      color: #2780F8;
-      cursor: pointer; }
+  border-bottom: 1px solid #e8e8e8;
+}
+header .right-wrap {
+  width: 35%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+header .right-wrap input {
+  font-family: "Lato", sans-serif;
+  height: 3vh;
+  border-radius: 5px;
+  border: 1px solid #a0a0a2;
+  width: 50%;
+  padding-left: 5px;
+  font-size: .9em;
+}
+header .right-wrap input:focus {
+  outline: none;
+}
+header .right-wrap input::placeholder {
+  color: #cdcece;
+}
+header .right-wrap i:hover {
+  color: #2780f8;
+  cursor: pointer;
+}
+header .right-wrap .menu {
+  color: white;
+  position: absolute;
+  top: 6vh;
+  right: 25px;
+  width: 300px;
+  height: 15vh;
+  background: lightslategrey;
+}
+header .right-wrap .menu p:hover {
+  cursor: pointer;
+  color: #2ab27b;
+}
