--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   height: 100%;
 }
 .main-container .nav-container video {
+  height: 25vh;
   position: absolute;
   border: 1px solid black;
   top: 7vh;
