--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@
 		min-width: 220px;
 		height:100%;
 		video{
+			height: 25vh;
 			position: absolute;
 			border: 1px solid black;
 			top: 7vh;
