--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,35 @@
   top: 7vh;
   left: 38vh;
 }
+.main-container .nav-container .snapshot {
+  position: absolute;
+  border: 1px solid black;
+  border-top: none;
+  padding: 5px;
+  top: 32vh;
+  left: 38vh;
+  width: 27%;
+  font-size: 1.2em;
+}
+.main-container .nav-container .snapshot i:hover {
+  cursor: pointer;
+}
+.main-container .nav-container .output {
+  width: 27vw;
+  top: 36vh;
+  height: 25vh;
+  position: absolute;
+  left: 38vh;
+  border: 1px solid #30dfff;
+}
+.main-container .nav-container canvas {
+  width: 27vw;
+  top: 36vh;
+  height: 25vh;
+  position: absolute;
+  left: 74vh;
+  border: 1px solid #ff247a;
+}
 .main-container .nav-container .login-user {
   display: flex;
   justify-content: space-around;
@@ -36,9 +65,16 @@
   border: 1px solid green;
 }
 .main-container .nav-container .login-user .profile-img {
-  border: 1px solid red;
+  display: flex;
+  border: 1px solid gray;
   height: 5vh;
   width: 5vh;
+  justify-content: center;
+  align-items: flex-end;
+}
+.main-container .nav-container .login-user .profile-img i {
+  font-size: 3em;
+  color: lightgreen;
 }
 .main-container .nav-container #nav-channels {
   display: flex;
