--- a/src/components/UserProfile/AddImg/AddImg.scss
+++ b/src/components/UserProfile/AddImg/AddImg.scss
@@ -1,1 +1,9 @@
-
+.add-img-modal {
+  background: rgba(0, 0, 0, 0.75);
+  width: 100vw;
+  height: 100vh;
+  right: 0;
+  top: 0;
+  z-index: 100;
+  position: absolute;
+}
