have active styling working for channel

--- a/src/components/Channels/Channels.css
+++ b/src/components/Channels/Channels.css
@@ -9,6 +9,9 @@
   .channel-title:hover {
     color: black;
     cursor: pointer; }
+  .channel-title a {
+    text-decoration: none;
+    color: inherit; }
   .channel-title p {
     margin: 0;
     padding: 10px 11px 0; }
