--- a/src/components/CreateChannel/CreateChannel.scss
+++ b/src/components/CreateChannel/CreateChannel.scss
@@ -1,70 +1,95 @@
 @import '../../styles/base.scss';
 
-.create-channel-container{
-	cursor: default;
-	position: absolute;
-	z-index:100;
-	height: 100vh;
-	width: 100vw;
-	display: flex;
-	justify-content:center;
-	top: 0;
-	left: 0;
-	background: white;
-	color: lightgray;
-	.channel-wrap{
-		padding-top:7%;
-		width: 42%;
-		h2{
-			font-size: 2em;
-			color: black;
-		}
-		h5{
-			font-weight:lighter;
-			color: $light-grey;
-			line-height:20px;
-		}
-		p{
-			margin:0 0 7px;
-			color: #464646;
-		}
-		input{
-			font-size:1em;
-			padding-left: 10px;
-			width: 97%;
-			height: 5vh;
-			border-radius: 5px;
-			outline: none;
-			border: 1px solid $light-grey;
-			margin-bottom:20px;
-			font-family:$lato;
-		}
-		.btn-wrap{
-			display: flex;
-			justify-content: flex-end;
-			padding-right: 7px;
-			font-family:$lato;
-			button{
-				padding: 13px;
-				font-size: .9em;
-				font-weight: bold;
-				margin-right:10px;
-				outline:none;
-				border: .5px solid $light-grey;
-				border-radius: 5px;
-				background: white;
-				color: $drk-grey;
-				cursor: pointer;
-			}
-			.active{background: $active-green !important}
-			button:first-child:hover{
-				color:$royal-blue;
-				background:white;
-			}
-			button:nth-child(2){
-				background: $light-grey;
-				color: white;
-			}
-		}
-	}
+.create-channel-container {
+  cursor: default;
+  position: absolute;
+  z-index: 100;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  background: white;
+  color: lightgray;
+  .channel-wrap {
+    padding-top: 7%;
+    width: 42%;
+    .esc-wrap {
+      position: absolute;
+      top: 50px;
+      right: 50px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      text-align: center;
+      width: 75px;
+      height: 75px;
+      border-radius: 50%;
+      color: #636262;
+      &:hover {
+        background: #dedcdc;
+        cursor: pointer;
+      }
+      i {
+        font-size: 2.25em;
+        font-weight: lighter;
+      }
+      esc {
+        display: flex;
+        justify-content: center;
+        font-size: 0.8em;
+      }
+    }
+    h2 {
+      font-size: 2em;
+      color: black;
+    }
+    h5 {
+      font-weight: lighter;
+      color: $light-grey;
+      line-height: 20px;
+    }
+    p {
+      color: #464646;
+    }
+    input {
+      font-size: 1em;
+      padding-left: 10px;
+      width: 97%;
+      height: 5vh;
+      border-radius: 5px;
+      outline: none;
+      border: 1px solid $light-grey;
+      margin: 7px 0 20px;
+      font-family: $lato;
+    }
+    .btn-wrap {
+      display: flex;
+      justify-content: flex-end;
+      padding-right: 7px;
+      font-family: $lato;
+      button {
+        padding: 13px;
+        font-size: .9em;
+        font-weight: bold;
+        margin-right: 10px;
+        outline: none;
+        border: .5px solid $light-grey;
+        border-radius: 5px;
+        background: white;
+        color: $drk-grey;
+        cursor: pointer;
+      }
+      button:first-child:hover {
+        color: $royal-blue;
+        background: white;
+      }
+      button:nth-child(2) {
+        border: none;
+        background: $light-grey;
+        color: white;
+      }
+    }
+  }
 }
